fix empty img on Safari

--- a/src/app/eye/eye.component.scss
+++ b/src/app/eye/eye.component.scss
@@ -6,6 +6,11 @@ img {
       max-height: 100vh;
 }
 
+// Fix for Safari
+img[src="data:,"] {
+      display: none;
+}
+
 div {
       position: absolute;
       cursor: pointer;
